# chimp_smhi

./: .gitignore  .pre-commit-config.yaml  README.md  chimp_smhi_v0.yml  chimp_smhi_v1.yml  chimp_smhi_v2.yml  chimp_smhi_v3.yml  conda-environment.yml  hrit2chimp.py  hritfiles2chimp.py  pyproject.toml
chimp_smhi/: __init__.py  chimp_ext_seviri.py
config_files/: training.toml
envs/: chimp_smhi.yaml  chimp_smhi.yml  chimp_smhi_v0.yml  chimp_smhi_v1.yml  chimp_smhi_v3.yml  chimp_smhi_v3_cuda.yml
src/: chimp_ext_seviri.py
src/chimp_smhi/: __init__.py  loader.py
src/chimp_smhi/extensions/: __init__.py  _seviri_extension.py
src/chimp_smhi/resampler/: __init__.py  _resampler.py
src/tests/: test_resampler.py  test_seviri_extension.py
tests/: test_chimp_ext_seviri.py  test_file_loading_and_resampling.py
