[project]
name = "chimp-smhi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" },
    { name = "Pouria Khalaj", email = "pouria.khalaj@smhi.se"},
    { name = "Simon Pfreundschuh" }
]
dependencies = ["chimp", "satpy"]
readme = "README.md"
requires-python = "<3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chimp_smhi"]
